//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  username String
  email String [unique, not null]
  description String
  contactNo String [unique, not null]
  password String [not null]
  lang Lang [not null, default: 'ENG']
  role Role [not null, default: 'TRADER']
  avatar String
  isVerified Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  admin Admin
  trader traders
  verifications user_verifications [not null]
  sentMessages chats [not null]
  receivedMessages chats [not null]
  uploadedFile uploaded_files [not null]
  roomUser room_users [not null]
  messageRead message_reads [not null]
  notification notifications [not null]
  createdRooms rooms [not null]
}

Table user_verifications {
  id String [pk]
  userId String [unique, not null]
  token String [unique]
  otp String
  documentUrl String[] [not null]
  verificationType VerificationStatus [not null, default: 'UNVERIFIED']
  createdAt DateTime [default: `now()`, not null]
  expiresAt DateTime [not null]
  user users [not null]
}

Table Admin {
  id String [pk]
  userId String [unique, not null]
  isActive Boolean [not null, default: true]
  fastName String
  lastName String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
}

Table traders {
  id String [pk]
  userId String [unique, not null]
  user users [not null]
  isActive Boolean [not null, default: true]
  stripeAccountId String
  fastName String
  lastName String
  skills String[] [not null]
  mininumHoulyRate Float
  nationality String
  tagline String[] [not null]
  description String
  attachments String[] [not null]
  resumeFile String
  socialMediaLink String[] [not null]
  isVerified Boolean [not null, default: false]
  isDeleted Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  offerByTrader task_applications [not null]
  traderOwner favourites [not null]
  favoriteByTrader favourites [not null]
  tasks tasks [not null]
  Bosting_task bosting_tasks [not null]
  reviewProvider reviews [not null]
  reviewReceiver reviews [not null]
  refferingByTrader TraderRefferIng [not null]
  refferingTraderList TraderRefferIng [not null]
  payment payments [not null]
  subscription subscriptions [not null]
}

Table TraderRefferIng {
  id String [pk]
  traderId String [not null]
  trader traders [not null]
  referringCount Float [not null, default: 0]
  refferingId String
  refferingTraderList traders
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table categories {
  id String [pk]
  name String [unique, not null]
  files String[] [not null]
  icon String
  description String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  SubCategory sub_categories [not null]
  tasks tasks [not null]
}

Table sub_categories {
  id String [pk]
  name String [not null]
  categoryId String [not null]
  files String[] [not null]
  icon String
  description String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  category categories [not null]
  tasks tasks [not null]
}

Table tasks {
  id String [pk]
  title String [not null]
  taskType TaskType [not null, default: 'PAYMENT']
  location String
  max_salary Float
  min_salary Float
  require_skills String[] [not null]
  provide_attachments String[] [not null]
  description String
  deadline DateTime
  tags String[] [not null]
  files String[] [not null]
  isActive Boolean [not null, default: true]
  status TaskStatus [not null, default: 'IN_PROGRESS']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  traderId String
  trader traders
  categoryid String [not null]
  category categories [not null]
  subCategoryid String
  subCategory sub_categories
  favourites favourites [not null]
  bosting_tasks bosting_tasks [not null]
  task_Application task_applications [not null]
  review reviews [not null]
  payment payments [not null]
}

Table task_applications {
  id String [pk]
  status AplicationStatus [not null, default: 'IN_PROGRESS']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  offerId String [not null]
  offerByTrader traders [not null]
  taskId String [not null]
  task tasks [not null]
}

Table favourites {
  id String [pk]
  type FavouriteType [not null, default: 'TASK']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  traderOwnerId String [not null]
  traderOwner traders [not null]
  favoriteByTraderId String
  favoriteByTrader traders
  taskId String
  task tasks
}

Table reviews {
  id String [pk]
  taskId String [not null]
  rating Int [not null]
  comment String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  task tasks [not null]
  reviewReceiverId String
  reviewReceiver traders
  reviewProviderId String
  reviewProvider traders
}

Table bosting_tasks {
  id String [pk]
  taskId String [not null]
  traderId String [not null]
  status Bosting_Status [not null, default: 'ACTIVE']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  task tasks [not null]
  trader traders [not null]
  payment payments [not null]
}

Table subscriptions {
  id String [pk]
  subscriptionPlanId String [not null]
  subscriptionPlan subscription_plans [not null]
  ownerId String [not null]
  trader traders [not null]
  subscriptionStatus SubscriptionStatus [not null, default: 'ACTIVE']
  stripeSubscriptionId String
  stripeCustomerId String
  expiresAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  cancelRequest Boolean [not null, default: false]
  payments payments [not null]
}

Table subscription_plans {
  id String [pk]
  plan SubscribePlan [unique, not null, default: 'PRO_PLAN']
  name String [not null]
  description String [not null]
  featuresList String[] [not null]
  trialPeriod Boolean [not null, default: false]
  price Float [not null, default: 0]
  stripeProductId String
  stripePriceId String [default: '']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  subscription subscriptions [not null]
}

Table payments {
  id String [pk]
  paymentType PaymentType [not null, default: 'TASK_PAYMENT']
  amount Float [not null]
  currency String [not null]
  paymentOwnerId String
  paymentStatus PaymentStatus [not null]
  subscriptionId String
  traderId String
  taskId String
  subscriptionPlanId String
  stripePaymentId String
  bostingId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  subscription subscriptions
  trader traders
  task tasks
  bosting bosting_tasks
}

Table notifications {
  id String [pk]
  userId String [not null]
  user users [not null]
  title String [not null]
  body String [not null]
  data String
  read Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table rooms {
  id String [pk]
  name String [not null]
  description String
  type RoomType [not null, default: 'GROUP']
  img String
  createdBy String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  creator users [not null]
  roomUsers room_users [not null]
  chat chats [not null]
  uploadedFiles uploaded_files [not null]
}

Table room_users {
  id String [pk]
  roomId String [not null]
  userId String [not null]
  role MemberType [not null, default: 'MEMEBER']
  joinedAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  room rooms [not null]
  user users [not null]

  indexes {
    (roomId, userId) [unique]
  }
}

Table chats {
  id String [pk]
  message String [not null]
  messageType MessageType [not null, default: 'TEXT']
  images String[] [not null]
  fileId String
  replyToId String
  isRead Boolean [not null, default: false]
  isEdited Boolean [not null, default: false]
  isDeleted Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  senderId String [not null]
  roomId String
  receiverId String [not null]
  sender users [not null]
  reciver users [not null]
  room rooms
  file uploaded_files
  messageRead message_reads [not null]
}

Table message_reads {
  id String [pk]
  messageId String [not null]
  userId String [not null]
  readAt DateTime [default: `now()`, not null]
  message chats [not null]
  user users [not null]

  indexes {
    (messageId, userId) [unique]
  }
}

Table uploaded_files {
  id String [pk]
  originalName String
  filename String
  path String
  size Int
  urls String[] [not null]
  mimeType String
  fileType FileType [not null, default: 'FILE']
  uploadedBy String [not null]
  roomId String
  createdAt DateTime [default: `now()`, not null]
  uploader users [not null]
  room rooms
  chat chats [not null]
}

Enum VerificationStatus {
  PENDING
  VERIFIED
  UNVERIFIED
}

Enum TaskType {
  CASH
  PAYMENT
}

Enum TaskStatus {
  IN_PROGRESS
  ORDER_ACTIVE
  DELIVERED
  COMPLETED
  CANCELLED
}

Enum AplicationStatus {
  IN_PROGRESS
  REJECTED
  APPROVED
}

Enum FavouriteType {
  TASK
  TRADER
}

Enum Bosting_Status {
  ACTIVE
  INACTIVE
  CANCELED
}

Enum PaymentType {
  SUBSCRIPTION
  BOOTS_PAYMENT
  TASK_PAYMENT
}

Enum RoomType {
  SINGLE
  GROUP
  PRIVATE
  BROADCAST
}

Enum MemberType {
  ADMIN
  MEMEBER
  MODARETOR
}

Enum MessageType {
  TEXT
  FILE
}

Enum FileType {
  VIDEO
  AUDIO
  IMAGE
  FILE
}

Enum Role {
  SUPER_ADMIN
  ADMIN
  TRADER
}

Enum Lang {
  ENG
  ARB
}

Enum SubscriptionStatus {
  PENDING
  ACTIVE
  INACTIVE
  EXPIRED
  CANCELLED
  PAST_DUE
}

Enum SubscribePlan {
  PRO_PLAN
  ELITE_PLAN
}

Enum PaymentMethod {
  STRIPE
  PAYPAL
}

Enum PaymentStatus {
  REQUIRES_PAYMENT_METHOD
  REQUIRES_CONFIRMATION
  REQUIRES_ACTION
  PROCESSING
  REQUIRES_CAPTURE
  CANCELED
  SUCCEEDED
  REFUNDED
  PARTIALLY_REFUNDED
  FAILED
  ON_HOLD
}

Ref: user_verifications.userId > users.id

Ref: Admin.userId - users.id

Ref: traders.userId - users.id

Ref: TraderRefferIng.traderId > traders.id

Ref: TraderRefferIng.refferingId > traders.id

Ref: sub_categories.categoryId > categories.id

Ref: tasks.traderId > traders.id

Ref: tasks.categoryid > categories.id

Ref: tasks.subCategoryid > sub_categories.id

Ref: task_applications.offerId > traders.id

Ref: task_applications.taskId > tasks.id

Ref: favourites.traderOwnerId > traders.id

Ref: favourites.favoriteByTraderId > traders.id

Ref: favourites.taskId > tasks.id

Ref: reviews.taskId > tasks.id

Ref: reviews.reviewReceiverId > traders.id

Ref: reviews.reviewProviderId > traders.id

Ref: bosting_tasks.taskId > tasks.id

Ref: bosting_tasks.traderId > traders.id

Ref: subscriptions.subscriptionPlanId > subscription_plans.id

Ref: subscriptions.ownerId > traders.id

Ref: payments.subscriptionId > subscriptions.id

Ref: payments.traderId > traders.id

Ref: payments.taskId > tasks.id

Ref: payments.bostingId > bosting_tasks.id

Ref: notifications.userId > users.id

Ref: rooms.createdBy > users.id

Ref: room_users.roomId > rooms.id

Ref: room_users.userId > users.id

Ref: chats.senderId > users.id

Ref: chats.receiverId > users.id

Ref: chats.roomId > rooms.id

Ref: chats.fileId > uploaded_files.id

Ref: message_reads.messageId > chats.id

Ref: message_reads.userId > users.id

Ref: uploaded_files.uploadedBy > users.id

Ref: uploaded_files.roomId > rooms.id